--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <title>React App</title>
+    <title>SimScrum</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
